[package]
name = "screen-audio-recorder-test"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0.80"
cpal = "0.15.2"
directories = "5.0.1"
tauri = { version = "1.5", features = [ "updater", "api-all", "dialog"] }
essi-ffmpeg = { git = "https://github.com/MrAdhit/essi-ffmpeg", rev = "051f162" }
ffmpeg-next = "6.1.1"
ffmpeg-sidecar = "1.0.0"
reqwest = "0.11.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
hound = "3.5.1"
universal-archiver = "0.2.2"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", rev = "9861dfd" }
memory-stats = "1.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
