[package]
name = "recordscript"
version = "0.0.0"
description = "Recordscript"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0.80"
cpal = "0.15.2"
directories = "5.0.1"
tauri = { version = "1.5", features = ["updater", "api-all", "dialog"] }
reqwest = "0.11.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", rev = "9861dfd" }
scrap = { path = "../libs/scrap" }
tokio = { version = "1.37.0", features = ["full"] }
gst = { version = "0.22.5", package = "gstreamer", features = ["v1_24"] }
gst_app = { version = "0.22.0", package = "gstreamer-app", features = [
  "v1_24",
] }
gst-plugin-fallbackswitch = "0.12.4"
byte-slice-cast = "1.2.2"
dialog = "0.3.0"
bincode = "1.3.3"
keyring = "2.3.3"
chrono = "0.4.38"
lettre = "0.11.7"
showfile = "0.1.1"
bytemuck = "1.16.1"
sysinfo = "0.30.12"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
